welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: reassignment to val
    posfinale=true
             ^