welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var posfinale = false
  while(!posfinale){
    rep(posfinale)
    move()
  }
}


def rep(posfinale : Boolean){
  if (setPos(getX(),getY()) == setPos(getMondeLargeur()-1, getMondeHauteur()-1)){
    posfinale=true
  }
}

def move(){
  for (i <- 0 to getMondeLargeur()-1){
    for(j <- 0 to getMondeHauteur()-1){
      setPos(getX()+1, getY()+1)
    }
  }
}